<resources>
    <string name="app_name">Classroom</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UTORid</string>
    <string name="text_email">UTORid</string>
    <string name="prompt_password">Password</string>
    <string name="text_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_student_login">Student login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_attendance_button">Take attendance</string>
    <string name="title_question_button">Ask a question</string>
    <string name="title_completion_button">Check completion</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_completion">CompletionActivity</string>
    <string name="title_menu">Menu</string>
    <string name="title_numerical_grade">switch to numerical grading</string>
    <string name="title_completion_grade">switch to completion grading</string>
    <string name="title_grade_students">Grade students</string>

    <!-- Activity Labels -->
    <string name="answer_questions_activity_label">Answer Question</string>
    <string name="attendance_activity_label">Attendance</string>
    <string name="completion_activity_label">Check completion</string>
    <string name="course_list_activity_label">Course List</string>
    <string name="login_activity_label">Login</string>
    <string name="new_question_activity_label">Ask new question</string>
    <string name="question_activity_label">Ask a Question</string>
    <string name="course_menu_activity_label">Menu</string>
    <string name="instructor_menu_activity_label">Menu</string>

    <!-- AnswerQuestionActivity -->
    <string name="prompt_answer">Type your answer here</string>
    <string name="action_submit">Submit</string>
    <string name="answer1">Pizza Mario Man</string>
    <string name="answer2">gcc -g</string>
    <string name="answer3">42</string>

    <!-- CourseMenuActivity -->
    <string name="title_im_here">I\'m here!</string>
    <string name="title_ans_question">Answer question</string>
    <string name="title_wtf">WTF?!</string>

    <!-- QuestionActivity -->
    <string name="question_list_title_text">Choose a question:</string>
    <string name="new_question_button_text">New Question</string>
    <string name="title_activity_new_question">NewQuestionActivity</string>
    <string name="question1">Mirror mirror on the wall, who is the fairest one of all?</string>
    <string name="question2">Best character.</string>
    <string name="question3">Which of the following?</string>
    <string name="waiting_for_results">Waiting for results...</string>

    <!-- NewQuestionActivity -->
    <string name="new_question_prompt">Question:</string>
    <string name="new_question_hint">Enter a question.</string>
    <string name="new_question_answer_type_prompt">Answer type:</string>
    <string name="new_question_post_button_text">Ask question!</string>

</resources>
