<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_menu"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/attendance_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_attendance_button"/>

    <Button
        android:id="@+id/question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_question_button"/>

    <Button
        android:id="@+id/completion_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_completion_button"/>
</LinearLayout>
