<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_course_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.classroom.CourseMenuActivity">

    <TextView
        android:id="@+id/course_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/im_here_button"
        android:text="@string/title_im_here"
        style="?android:textAppearanceSmall"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/emeraldGreen"
        android:layout_weight="1"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_ans_question"
        style="?android:textAppearanceSmall"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/sunflowerYellow"
        android:layout_weight="1"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_wtf"
        style="?android:textAppearanceSmall"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/wtfRed"
        android:layout_weight="1"
        android:textStyle="bold"/>
</LinearLayout>
